# optimized-routing-extension

./: .coverage  .coveragerc  .env_example  .gitignore  README  README.md  bluefolder_api.py  bluefolder_integration.py  config.py  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  route_today.py  routing.py  test_google.py
.github/workflows/: tests.yml
manager/: base.py  google_manager.py  mapbox_manager.py  osm_manager.py
optimized_routing/: __init__.py  bluefolder_integration.py  config.py  main.py  route_today.py  routing.py
optimized_routing/manager/: __init__.py  base.py  geoapify_manager.py  google_manager.py  mapbox_manager.py  ors_native_manager.py  osm_manager.py
optimized_routing/utils/: __init__.py  cache_manager.py
reports/: coverage.xml  unit-tests.xml
tests/: __init__.py  conftest.py  test_bluefolder_integration.py  test_cli_arguments.py  test_geoapify_manager.py  test_google_windows.py  test_mapbox_osm_windows.py  test_provider_validation.py  test_rate_limit_retry.py  test_route_optimizer.py  test_routing_provider.py  test_shortener_cache.py  test_url_shortener.py  test_user_list.py  test_user_update.py  test_users_full_list.py
utils/: cache_manager.py
